method overview in point form

--- a/project_report.ipynb
+++ b/project_report.ipynb
@@ -543,8 +543,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**TO EDIT**\n",
-    "We will then split the data into training and testing sets with a 75%/25% train/test proportion and set the strata argument to weather since that is what we intend to classify. Our next step is to find the best K nearest neighbor that will render us highest accuracy. This process includes performing a 5-fold cross-validation, splitting the training set and preprocessing the data by specifying a recipe. We will upsample our data because, as described above, there is heavy imbalance among the weather types. After scaling and centering on all predictors, we will specify a model using nearest_neighbors, setting the neighbors = tune(). The workflow function will allow us to chain together our recipe and model and the tune_grid function will fit the model for each value in a range of parameter values. We will then plot parameter values against an accuracy estimate to visually determine best K value (with the highest accuracy). With that new K value, we will create a new model specification with what we found for K and retrain the classifier using the fit function. After creating a new workflow which includes the new model specification, we will use the predict function to evaluate the estimated accuracy of the classifier on the test set."
+    "1. Perform forward selection to get a better understanding of which variables do better as predictors in the following steps\n",
+    "2. Split the data into training and testing sets with a 75%/25% train/test proportion\n",
+    "3. Perform 5-fold cross-validation to find the best K value for our K-nearest neighbours model\n",
+    "    - Create a `nearest_neighbor` model specification with `neighbors = tune()`\n",
+    "    - Create a `recipe` with steps for upsampling to fix imbalance, center and scaling to standardize\n",
+    "    - Test K values from 1 through 10\n",
+    "4. Train and fit the final model\n",
+    "    - Create a new model specification using the best K value\n",
+    "    - Retrain the classifier using the `fit` function\n",
+    "5. Make predictions on the testing data set\n",
+    "6. Calculate the accuracy of our predictions and evaluate our model based on this accuracy\n",
+    "    - Produce a confusion matrix to see the breakdown of how our model has been classifying observations\n",
+    "7. Visualize our final model"
    ]
   },
   {
@@ -968,52 +979,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# create the grid of precipitation/temp_avg/temp_min vals, and arrange in a data frame\n",
-    "prec_grid <- seq(min(weather_data$precipitation), \n",
-    "                max(weather_data$precipitation), \n",
-    "                length.out = 100)\n",
-    "tmpa_grid <- seq(min(weather_data$temp_avg), \n",
-    "                max(weather_data$temp_avg), \n",
-    "                length.out = 100)\n",
-    "tmpmin_grid <- seq(min(weather_data$temp_min), \n",
-    "                max(weather_data$temp_min), \n",
-    "                length.out = 100)\n",
-    "ptwgrid <- as_tibble(expand.grid(precipitation = prec_grid, \n",
-    "                                temp_avg = tmpa_grid,\n",
-    "                                temp_min = tmpmin_grid))\n",
-    "\n",
-    "# use the fit workflow to make predictions at the grid points\n",
-    "knnPredGrid <- predict(weather_fit, ptwgrid)\n",
-    "\n",
-    "# bind the predictions as a new column with the grid points\n",
-    "prediction_table <- bind_cols(knnPredGrid, ptwgrid) %>% \n",
-    "  rename(weather = .pred_class)\n",
-    "\n",
-    "# plot:\n",
-    "# 1. the colored scatter of the original data\n",
-    "# 2. the faded colored scatter for the grid points\n",
-    "wkflw_plot <-\n",
-    "  ggplot() +\n",
-    "  geom_point(data = weather_data, \n",
-    "             mapping = aes(x = temp_avg, \n",
-    "                           y = precipitation, \n",
-    "                           color = weather), \n",
-    "             alpha = 0.75) +\n",
-    "  geom_point(data = prediction_table, \n",
-    "             mapping = aes(x = temp_avg, \n",
-    "                           y = precipitation, \n",
-    "                           color = weather), \n",
-    "             alpha = 0.02, \n",
-    "             size = 10) +\n",
-    "  labs(color = \"Diagnosis\", \n",
-    "       x = \"Average Temperature (°C)\", \n",
-    "       y = \"Precipitation (cm)\") +\n",
-    "  scale_colour_brewer(palette = \"Set1\") +\n",
-    "  theme(text = element_text(size = 12))\n",
-    "\n",
-    "wkflw_plot"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
